# STERO_21Z

./: README.md
mobile/: CMakeLists.txt  Navigation_manual.txt  Progress.txt  package.xml
mobile/STERO_final_doc/: sprawozdanie.aux  sprawozdanie.tex  sprawozdanie.toc
mobile/STERO_final_doc/Projekt_1/: laboratorium.tex  podsumowanie.tex  projekt.tex  projekt.tps  sprawozdanie.aux  sprawozdanie.dvi  sprawozdanie.tcp  sprawozdanie.tps  wprowadzenie.tex
mobile/STERO_final_doc/Projekt_2/: laboratorium.tex  projekt.tex  sprawozdanie.aux  sprawozdanie.tcp  sprawozdanie.toc  wprowadzenie.tex
mobile/bag_files/: analyze.py  global_high.csv  global_low.csv  global_med.csv  odom_high.csv  odom_low.csv  odom_med.csv
mobile/config/: global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
mobile/docs/Projekt_1/: laboratorium.tex  podsumowanie.tex  projekt.dvi  projekt.tex  sprawozdanie.blg  sprawozdanie.tex  sprawozdanie.toc  wprowadzenie.tex
mobile/docs/Projekt_2/: laboratorium.tex  podsumowanie.tex  projekt.tex  sprawozdanie.blg  sprawozdanie.dvi  sprawozdanie.tex  sprawozdanie.tps  wprowadzenie.tex
mobile/launch/: tiago_amcl_corridor.launch  tiago_amcl_home.launch  tiago_corridor.launch  tiago_home.launch
mobile/maps/: budynek.yaml  korytarz.yaml
mobile/other/: listener.py  talker.py  talker_odom2.py  tiago_raport.odt  tiago_run.txt
mobile/rviz/: home.rviz
mobile/screenshots/lab3_amcl/: lab
mobile/scripts/: listener.cpp  talker_odom.py  talker_square.py
mobile/worlds/: corridor.world  home.world
(+46 files in other folders)
